overflow fixed

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -27,6 +27,7 @@ body {
     position: absolute;
     bottom: 0;
     transition:60s all;
+    overflow: hidden;
 
     #audio {
       display: none;
